--- a/scss/layout/_container.scss
+++ b/scss/layout/_container.scss
@@ -12,17 +12,16 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		padding-top: 50px;
 		width: 60%;
 
 		.content-box {
-			margin-top: 10%;
 			margin-inline: 50px;
 			width: min(100%, 520px);
 		}
 
 		.logo {
 			width: 8rem;
+			cursor: pointer;
 		}
 
 		.main-title {
@@ -48,7 +47,7 @@
 		}
 	}
 
-	&__image {
+	&__desktop-image {
 		background-image: url('../images/hero-desktop.jpg');
 		background-position: center center;
 		background-size: cover;
@@ -67,17 +66,43 @@
 			text-align: center;
 
 			.content-box {
-				padding: 25px;
+				height: 100vh;
+				display: flex;
+				flex-direction: column;
+				align-items: center;
 			}
 
+			.logo {
+				margin: 20px;
+				width: 6rem;
+				align-self: flex-start;
+			}
 			.main-title {
 				font-size: 2rem;
 				letter-spacing: 1rem;
 				line-height: 1.3;
 			}
 		}
-		&__image {
+		&__desktop-image {
 			display: none;
+		}
+	}
+
+	@media screen and (max-width: 400px) {
+		.mobile-image {
+			background-image: url('../images/hero-mobile.jpg');
+			background-position: center center;
+			background-size: cover;
+			width: 100%;
+			height: 30%;
+		}
+
+		.main-title {
+			margin-top: 2rem;
+		}
+
+		.main-text-content {
+			margin-inline: 20px;
 		}
 	}
 }
