--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -18,3 +18,11 @@ a:active {
 	text-decoration: none;
 	font-weight: bolder;
 }
+
+@media screen and (max-width: 767px) {
+	input,
+	select,
+	textarea {
+		font-size: 16px;
+	}
+}
