--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -13,9 +13,14 @@ form {
 		padding: 10px 20px;
 		border: 1px solid var(--red-desaturated);
 		margin-bottom: 10px;
+		background-color: transparent;
 
 		&::placeholder {
 			color: var(--red-desaturated);
+		}
+
+		&:focus {
+			outline: 2px solid var(--red-desaturated);
 		}
 	}
 	.btn {
@@ -56,5 +61,9 @@ form {
 
 	@media screen and (max-width: 450px) {
 		width: 80%;
+
+		.btn {
+			padding-inline: 25px;
+		}
 	}
 }
