--- a/scss/layout/_container.scss
+++ b/scss/layout/_container.scss
@@ -11,10 +11,12 @@
 	&__content {
 		display: flex;
 		flex-direction: column;
+		justify-content: center;
 		align-items: center;
 		width: 60%;
 
 		.content-box {
+			padding-inline: 50px;
 			margin-inline: 50px;
 			width: min(100%, 520px);
 		}
@@ -22,6 +24,7 @@
 		.logo {
 			width: 8rem;
 			cursor: pointer;
+			margin-top: 3rem;
 		}
 
 		.main-title {
@@ -38,9 +41,7 @@
 		}
 
 		.attribution {
-			position: absolute;
-			bottom: 0px;
-
+			margin-top: 200px;
 			a {
 				color: var(--red-desaturated);
 			}
@@ -60,7 +61,10 @@
 		}
 	}
 
-	@media screen and (max-width: 700px) {
+	@media screen and (max-width: 450px) {
+		height: auto;
+		min-height: 0;
+
 		&__content {
 			width: 100%;
 			text-align: center;
@@ -78,31 +82,27 @@
 				align-self: flex-start;
 			}
 			.main-title {
+				margin-top: 2rem;
 				font-size: 2rem;
 				letter-spacing: 1rem;
 				line-height: 1.3;
 			}
+
+			.main-text-content {
+				margin-inline: 20px;
+			}
 		}
+
 		&__desktop-image {
 			display: none;
 		}
-	}
-
-	@media screen and (max-width: 450px) {
 		.mobile-image {
 			background-image: url('../images/hero-mobile.jpg');
 			background-position: center center;
 			background-size: cover;
 			width: 100%;
 			height: 30%;
-		}
-
-		.main-title {
-			margin-top: 2rem;
-		}
-
-		.main-text-content {
-			margin-inline: 20px;
+			min-height: 230px;
 		}
 	}
 }
