--- a/scss/layout/_container.scss
+++ b/scss/layout/_container.scss
@@ -64,9 +64,13 @@
 	@media screen and (max-width: 450px) {
 		height: auto;
 		min-height: 0;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
 
 		&__content {
 			width: 100%;
+			height: auto;
 			text-align: center;
 
 			.content-box {
@@ -74,6 +78,8 @@
 				display: flex;
 				flex-direction: column;
 				align-items: center;
+				margin-inline: 20px;
+				padding-inline: 20px;
 			}
 
 			.logo {
@@ -96,11 +102,13 @@
 		&__desktop-image {
 			display: none;
 		}
+
 		.mobile-image {
 			background-image: url('../images/hero-mobile.jpg');
 			background-position: center center;
 			background-size: cover;
-			width: 100%;
+			width: calc(100% + 100px);
+			margin: 0 -50px;
 			height: 30%;
 			min-height: 230px;
 		}
