fixed mobile viewport and very large screen viewport

--- a/scss/base/_boilerplate.scss
+++ b/scss/base/_boilerplate.scss
@@ -10,4 +10,8 @@ body {
 	margin: 0;
 	width: 100vw;
 	height: 100vh;
+	background-color: var(--red-desaturated);
+
+	display: flex;
+	justify-content: center;
 }
