--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -59,7 +59,11 @@ form {
 		display: none;
 	}
 
-	@media screen and (max-width: 450px) {
+	@media screen and (max-width: 1100px) {
+		width: 60%;
+	}
+
+	@media screen and (max-width: 650px) {
 		width: 80%;
 
 		.btn {
