--- a/scss/layout/_container.scss
+++ b/scss/layout/_container.scss
@@ -1,6 +1,6 @@
 .container {
 	display: flex;
-	width: 100%;
+	width: min(100%, 1600px);
 	min-height: 100vh;
 	background-image: linear-gradient(
 		135deg,
@@ -16,12 +16,16 @@
 		width: 60%;
 
 		.content-box {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
 			padding-inline: 50px;
 			margin-inline: 50px;
 			width: min(100%, 520px);
 		}
 
 		.logo {
+			align-self: flex-start;
 			width: 8rem;
 			cursor: pointer;
 			margin-top: 3rem;
@@ -55,21 +59,41 @@
 		width: 40%;
 	}
 
-	@media screen and (max-width: 800px) {
-		.attribution {
+	@media screen and (max-width: 1100px) {
+		height: auto;
+		width: 80%;
+		min-height: 0;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		text-align: center;
+
+		&__content {
+			width: auto;
+
+			.content-box {
+				width: 80%;
+
+				.main-title {
+					margin-inline: 100px;
+				}
+			}
+		}
+
+		&__desktop-image {
 			display: none;
 		}
 	}
 
-	@media screen and (max-width: 450px) {
+	@media screen and (max-width: 650px) {
 		height: auto;
 		min-height: 0;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
+		width: 400px;
 
 		&__content {
-			width: 100%;
 			height: auto;
 			text-align: center;
 
@@ -78,8 +102,9 @@
 				display: flex;
 				flex-direction: column;
 				align-items: center;
-				margin-inline: 20px;
-				padding-inline: 20px;
+				width: 100%;
+				margin: 0;
+				padding: 0;
 			}
 
 			.logo {
@@ -88,14 +113,14 @@
 				align-self: flex-start;
 			}
 			.main-title {
-				margin-top: 2rem;
+				margin-top: 4rem;
 				font-size: 2rem;
 				letter-spacing: 1rem;
 				line-height: 1.3;
 			}
 
 			.main-text-content {
-				margin-inline: 20px;
+				margin-inline: 40px;
 			}
 		}
 
@@ -107,10 +132,15 @@
 			background-image: url('../images/hero-mobile.jpg');
 			background-position: center center;
 			background-size: cover;
-			width: calc(100% + 40px);
-			margin: 0 -20px;
+			width: 100%;
+			// width: calc(100% + 100px);
+			margin: 0 -50px;
 			height: 30%;
 			min-height: 230px;
+		}
+
+		.attribution {
+			margin-top: 100px;
 		}
 	}
 }
