--- a/scss/layout/_container.scss
+++ b/scss/layout/_container.scss
@@ -91,7 +91,7 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
-		width: 400px;
+		width: min(100%, 450px);
 
 		&__content {
 			height: auto;
