removed focus on mobile view

--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -66,6 +66,12 @@ form {
 	@media screen and (max-width: 650px) {
 		width: 80%;
 
+		input {
+			&:focus {
+				outline: none;
+			}
+		}
+
 		.btn {
 			padding-inline: 25px;
 		}
