--- a/scss/layout/_container.scss
+++ b/scss/layout/_container.scss
@@ -60,7 +60,7 @@
 	}
 
 	@media screen and (max-width: 1100px) {
-		height: auto;
+		height: 750px;
 		width: 80%;
 		min-height: 0;
 		display: flex;
@@ -82,6 +82,10 @@
 
 		&__desktop-image {
 			display: none;
+		}
+
+		.attribution {
+			margin-top: 100px;
 		}
 	}
 
