--- a/scss/layout/_container.scss
+++ b/scss/layout/_container.scss
@@ -60,7 +60,7 @@
 	}
 
 	@media screen and (max-width: 1100px) {
-		height: 750px;
+		height: max(100%, 750px);
 		width: 80%;
 		min-height: 0;
 		display: flex;
