--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -53,7 +53,8 @@ form {
 	}
 
 	.error-message {
-		color: var(--red-desaturated);
+		text-align: left;
+		color: var(--red-soft);
 		font-weight: 600;
 		margin-left: 20px;
 		display: none;
